--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <div class="canvases-wrapper">
     </div>
 
+    <script src="./libraries/jszip/FileSaver.js"></script>
+    <script src="./libraries/jszip/jszip.min.js"></script>
     <script src="./utils.js"></script>
     <script src="./scripts.js"></script>
 </body>
